--- a/styles/main.css
+++ b/styles/main.css
@@ -12,12 +12,19 @@ body:before {
     width: 100%;
     height: 100%;
     z-index: -10;
-    background: url(../img/bg_scania.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     background-color: black;
+  }
+
+  body.a_ets2_scania::before {
+    background: url(../img/bg_scania.jpg) no-repeat center center;
+  }
+
+  body.b_trs31:before {
+    background: url(../img/bg_trs.jpg) no-repeat center center;
   }
   
   .fg-text {
