--- a/styles/main.css
+++ b/styles/main.css
@@ -12,10 +12,10 @@ body:before {
     width: 100%;
     height: 100%;
     z-index: -10;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
     background-color: black;
   }
 
